--- a/index.html
+++ b/index.html
@@ -3,8 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dasmoto's Arts & Crafts</title>
+    <link rel="stylesheet" href="/resources/css/normalize.css" />
     <link rel="stylesheet" href="/resources/css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Banner Section -->
+    <header class="banner">
+      <h1>Dasmoto's Arts & Crafts</h1>
+    </header>
+    <main>
+      <!-- Brushes Section -->
+      <section>
+        <h2>Brushes</h2>
+        <img src="/resources/images/hacksaw.webp" alt="Hacksaw Brushes" />
+        <h3>Hacksaw Brushes</h3>
+        <p>
+          Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to
+          hold paint in large amounts. Available in different sizes. Starting at $3.00 / brush.
+        </p>
+      </section>
+      <!-- Frames Section -->
+      <section>
+        <h2>Frames</h2>
+        <img src="/resources/images/frames.webp" alt="Art Frames" />
+        <h3>Art Frames (assorted)</h3>
+        <p>
+          Assorted frames made of different material, including MDF, birchwood, and PDE. Select
+          frames can be sanded and painted according to your needs. Starting at $2.00 / frame.
+        </p>
+      </section>
+      <!-- Paint Section -->
+      <section>
+        <h2>Paint</h2>
+        <img src="/resources/images/finnish.jpg" alt="Clean Finnish Paint" />
+        <h3>Clean Finnish Paint</h3>
+        <p>
+          Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1
+          oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and
+          longevity of any artwork. Starting at $5.00 / tube.
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
