--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dasmoto's Arts & Crafts</title>
-    <link rel="stylesheet" href="/resources/css/normalize.css" />
-    <link rel="stylesheet" href="/resources/css/index.css" />
+    <link rel="stylesheet" href="./resources/css/normalize.css" />
+    <link rel="stylesheet" href="./resources/css/index.css" />
   </head>
   <body>
     <!-- Banner Section -->
@@ -16,7 +16,7 @@
       <!-- Brushes Section -->
       <section class="brushes">
         <h2>Brushes</h2>
-        <img src="/resources/images/hacksaw.webp" alt="Hacksaw Brushes" />
+        <img src="./resources/images/hacksaw.webp" alt="Hacksaw Brushes" />
         <h3>Hacksaw Brushes</h3>
         <p>
           Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to
@@ -27,7 +27,7 @@
       <!-- Frames Section -->
       <section class="frames">
         <h2>Frames</h2>
-        <img src="/resources/images/frames.webp" alt="Art Frames" />
+        <img src="./resources/images/frames.webp" alt="Art Frames" />
         <h3>Art Frames (assorted)</h3>
         <p>
           Assorted frames made of different material, including MDF, birchwood, and PDE. Select
@@ -38,7 +38,7 @@
       <!-- Paint Section -->
       <section class="paint">
         <h2>Paint</h2>
-        <img src="/resources/images/finnish.jpg" alt="Clean Finnish Paint" />
+        <img src="./resources/images/finnish.jpg" alt="Clean Finnish Paint" />
         <h3>Clean Finnish Paint</h3>
         <p>
           Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1
